--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -44,6 +44,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Abbott2015,
+  author    = {Abbott, J. T. and Austerweil, J. L. and Griffiths, T. L.},
+  title     = {Random walks on semantic networks can resemble optimal foraging.},
+  journal   = {Psychological Review},
+  year      = {2015},
+  volume    = {122},
+  number    = {3},
+  pages     = {558-569},
+  doi       = {10.1037/a0038693},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{AbdulRahman2013,
   author    = {Abdul-Rahman, A. and Lein, J. and Coles, K. and Maguire, E. and Meyer, M. and Wynne, M. and Johnson, C. R. and Trefethen, A. and Chen, M.},
   title     = {Rule-based Visual Mappings - with a Case Study on Poetry Visualization},
@@ -6302,6 +6315,18 @@
   url       = {http://www.hup.harvard.edu/catalog.php?isbn=9780674843714},
 }
 
+@Article{Burt2000,
+  author    = {Burt, R. S.},
+  title     = {Decay functions},
+  journal   = {Social Networks},
+  year      = {2000},
+  volume    = {22},
+  number    = {1},
+  doi       = {10.1016/s0378-8733(99)00015-5},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Book{Burt2005,
   title     = {Brokerage and Closure: An Introduction to Social Capital},
   publisher = {Oxford University Press},
@@ -9184,7 +9209,7 @@ arXiv: https://arxiv.org/abs/1709.07604},
   month        = {08},
   year         = {2017},
   title        = {How Many Pages Long Have Marvel Comic Stories Been Over the Years?},
-  howpublished = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
+  howpublished = {\url{https://www.cbr.com/marvel-comics-how-many-pages-long/}},
   organization = {{Comic Book Resources}},
   url          = {https://www.cbr.com/marvel-comics-how-many-pages-long/},
   owner        = {Vincent},
@@ -10369,6 +10394,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.06.24},
   url       = {https://books.google.fr/books?id=WC4zmQkjtqMC},
+}
+
+@Article{Diekelmann2010,
+  author    = {Diekelmann, S. and Born, J.},
+  title     = {The memory function of sleep},
+  journal   = {Nature Reviews Neuroscience},
+  year      = {2010},
+  volume    = {11},
+  number    = {2},
+  pages     = {114-126},
+  doi       = {10.1038/nrn2762},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Diesner2005,
@@ -14036,6 +14074,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2020.07.20},
 }
 
+@Book{Freud1900,
+  title     = {The interpretation of dreams},
+  publisher = {Avon Books},
+  year      = {1900},
+  author    = {Freud, S.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://psychclassics.yorku.ca/Freud/Dreams/dreams.pdf},
+}
+
 @Article{Freund1997,
   author    = {Freund, Y. and Schapire, R. E.},
   title     = {A Decision-Theoretic Generalization of On-Line Learning and an Application to Boosting},
@@ -15127,6 +15175,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1186/1471-2105-9-s9-s11},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@Article{Gilestro2009,
+  author    = {Gilestro, G. F. and Tononi, G. and Cirelli, C.},
+  title     = {Widespread Changes in Synaptic Markers as a Function of Sleep and Wakefulness in Drosophila},
+  journal   = {Science},
+  year      = {2009},
+  volume    = {324},
+  number    = {5923},
+  pages     = {109-112},
+  doi       = {10.1126/science.1166673},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Gill2007,
@@ -18104,7 +18165,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   month        = {05},
   year         = {2013},
   title        = {{Game of Thrones} narrative chart - Character extractions and proximity map},
-  howpublished = {https://www.behance.net/gallery/9024025/Game-of-Thrones-narrative-chart},
+  howpublished = {\url{https://www.behance.net/gallery/9024025/Game-of-Thrones-narrative-chart}},
   organization = {Behance.com},
   url          = {http://i.imgur.com/d6XrPNG.jpg},
   owner        = {Vincent},
@@ -18262,6 +18323,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.06.21},
   url       = {https://psycnet.apa.org/record/1988-97471-000},
+}
+
+@Article{Hobson2000,
+  author    = {Hobson, J. A. and Pace-Schott, E. F. and Stickgold, R.},
+  title     = {Dreaming and the brain: Toward a cognitive neuroscience of conscious states},
+  journal   = {Behavioral and Brain Sciences},
+  year      = {2000},
+  volume    = {23},
+  number    = {6},
+  pages     = {793-842},
+  doi       = {10.1017/s0140525x00003976},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
+@Book{Hobson2002,
+  title     = {Dreaming: An introduction to the science of sleep},
+  publisher = {Oxford University Press},
+  year      = {2002},
+  author    = {Hobson, J. A.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://psycnet.apa.org/record/2004-15140-000},
 }
 
 @Book{Hochman1985,
@@ -19885,7 +19969,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   month        = {12},
   year         = {2021},
   title        = {A Network Map of The Witcher},
-  howpublished = {https://nightingaledvs.com/a-network-map-of-the-witcher/},
+  howpublished = {\url{https://nightingaledvs.com/a-network-map-of-the-witcher/}},
   organization = {Nightingale},
   url          = {https://nightingaledvs.com/a-network-map-of-the-witcher/},
   owner        = {Vincent},
@@ -21092,6 +21176,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.06.21},
 }
 
+@Book{Keil1979,
+  title     = {Semantic and conceptual development: An ontological perspective},
+  publisher = {Harvard University Press},
+  year      = {1979},
+  author    = {Keil, F. C.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://books.google.fr/books/about/Semantic_and_Conceptual_Development.html},
+}
+
 @InProceedings{Keim2007,
   author    = {Keim, D. A. and Oelke, D.},
   title     = {Literature Fingerprinting: A New Method for Visual Literary Analysis},
@@ -21149,6 +21243,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.tics.2010.02.005},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Kelly1985,
+  author    = {Kelly, M. H. and Keil, F. C.},
+  title     = {The More Things Change...: Metamorphoses and Conceptual Structure},
+  journal   = {Cognitive Science},
+  year      = {1985},
+  volume    = {9},
+  number    = {4},
+  pages     = {403-416},
+  doi       = {10.1207/s15516709cog0904_2},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @InCollection{Kelly2002,
@@ -23029,7 +23136,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   month        = {06},
   year         = {2011},
   title        = {ASOIAF Narrative Chart},
-  howpublished = {http://www.sermountaingoat.co.uk/timeline/info/narrative\_chart.png},
+  howpublished = {\url{http://www.sermountaingoat.co.uk/timeline/info/narrative\_chart.png}},
   organization = {MountainGoat.co.uk},
   url          = {http://www.sermountaingoat.co.uk/timeline/info/narrative_chart.png},
   owner        = {Vincent},
@@ -26117,6 +26224,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.12.24},
 }
 
+@Book{Luce1959,
+  title     = {Individual choice behavior: A theoretical analysis},
+  publisher = {Wiley},
+  year      = {1959},
+  author    = {Luce, R. D.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://psycnet.apa.org/record/1960-03588-000},
+}
+
 @Article{Luce1998,
   author    = {Luce, P. A. and Pisoni, D. B.},
   title     = {Recognizing Spoken Words: The Neighborhood Activation Model},
@@ -28269,7 +28386,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Mednick1968,
   author    = {Mednick, S. A.},
-  title     = {The Remote Associates Test{\ast}},
+  title     = {The Remote Associates Test},
   journal   = {Journal of Creative Behavior},
   year      = {1968},
   volume    = {2},
@@ -30288,6 +30405,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.07.24},
 }
 
+@Article{Nairne1990,
+  author    = {Nairne, J. S.},
+  title     = {A feature model of immediate memory},
+  journal   = {Memory \& Cognition},
+  year      = {1990},
+  volume    = {18},
+  number    = {3},
+  pages     = {251-269},
+  doi       = {10.3758/bf03213879},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Naldi2003,
   author    = {Naldi, M.},
   title     = {Concentration indices and Zipf's law},
@@ -31397,6 +31527,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://escholarship.org/uc/item/8508h946},
 }
 
+@Article{Norman2005,
+  author    = {Norman, K. A. and Newman, E. L. and Perotte, A. J.},
+  title     = {Methods for reducing interference in the Complementary Learning Systems model: Oscillating inhibition and autonomous memory rehearsal},
+  journal   = {Neural Networks},
+  year      = {2005},
+  volume    = {18},
+  number    = {9},
+  pages     = {1212-1228},
+  doi       = {10.1016/j.neunet.2005.08.010},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Book{Norris1997,
   title     = {Markov Chains},
   publisher = {Cambridge University Press},
@@ -31417,6 +31560,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1111/j.1748-0922.2006.00018.x},
   owner     = {Vincent},
   timestamp = {2019.04.02},
+}
+
+@Article{Nosofsky1986,
+  author    = {Nosofsky, R. M.},
+  title     = {Attention, similarity, and the identification-categorization relationship},
+  journal   = {Journal of Experimental Psychology},
+  year      = {1986},
+  volume    = {115},
+  number    = {1},
+  pages     = {39-57},
+  doi       = {10.1037/0096-3445.115.1.39},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Book{Noth1981,
@@ -32967,6 +33123,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.24},
 }
 
+@Article{Pesant2005,
+  author    = {Pesant, N. and Zadra, A.},
+  title     = {Dream content and psychological well-being: A longitudinal study of the continuity hypothesis},
+  journal   = {Journal of Clinical Psychology},
+  year      = {2005},
+  volume    = {62},
+  number    = {1},
+  pages     = {111-121},
+  doi       = {10.1002/jclp.20212},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Pescatore2014,
   author    = {Pescatore, G. and Innocenti, V. and Brembilla, P.},
   title     = {Selection and evolution in narrative ecosystems. A theoretical framework for narrative prediction},
@@ -33916,6 +34085,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   author       = {Pudney, C.},
   year         = {2014},
   title        = {The {Simpsons} Social Network (Season 1)},
+  howpublished = {\url{http://www.vislives.com/2014/09/the-simpons-social-netwok-season-1.html}},
   organization = {vislives.com},
   url          = {http://www.vislives.com/2014/09/the-simpons-social-netwok-season-1.html},
   owner        = {Vincent},
@@ -35500,6 +35670,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@Article{Rittenhouse1994,
+  author    = {Rittenhouse, C. D. and Stickgold, R. and Hobson, J. A.},
+  title     = {Constraint on the Transformation of Characters, Objects, and Settings in Dream Reports},
+  journal   = {Consciousness and Cognition},
+  year      = {1994},
+  volume    = {3},
+  number    = {1},
+  pages     = {100-113},
+  doi       = {10.1006/ccog.1994.1007},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Riva2002,
   author    = {Riva, G.},
   title     = {The Sociocognitive Psychology of Computer-Mediated Communication: The Present and Future of Technology-Based Interactions},
@@ -35548,6 +35731,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.09.18},
   url       = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.696.7314&rep=rep1&type=pdf},
+}
+
+@Article{Roberts2010,
+  author    = {Roberts, S. G. B. and Dunbar, R. I. M.},
+  title     = {Communication in social networks: Effects of kinship, network size, and emotional closeness},
+  journal   = {Personal Relationships},
+  year      = {2010},
+  volume    = {18},
+  number    = {3},
+  pages     = {439-452},
+  doi       = {10.1111/j.1475-6811.2010.01310.x},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Roberts-Smith2013,
@@ -36318,6 +36514,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   month        = {03},
   year         = {2016},
   title        = {Why {The Force Awakens} is not just a remake of {A New Hope}},
+  howpublished = {\url{http://www.derekruths.com/2016/03/05/why-the-force-awakens-is-not-just-a-remake-of-a-new-hope/}},
   organization = {{derekruths.com}},
   url          = {http://www.derekruths.com/2016/03/05/why-the-force-awakens-is-not-just-a-remake-of-a-new-hope/},
   owner        = {Vincent},
@@ -38233,6 +38430,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2022.03.13},
 }
 
+@Article{Shepard1957,
+  author    = {Shepard, R. N.},
+  title     = {Stimulus and response generalization: A stochastic model relating generalization to distance in psychological space},
+  journal   = {Psychometrika},
+  year      = {1957},
+  volume    = {22},
+  number    = {4},
+  pages     = {325-345},
+  doi       = {10.1007/bf02288967},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Shervashidze2009,
   author    = {Shervashidze, N. and Vishwanathan, S. V. N. and Petri, T. H. and Mehlhorn, K. and Borgwardt, K. M.},
   title     = {Efficient graphlet kernels for large graph comparison},
@@ -38624,6 +38834,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/17400300802098263},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@InProceedings{Sims2019,
+  author    = {Sims, M. and Park, J. H. and Bamman, D.},
+  title     = {Literary Event Detection},
+  booktitle = {57th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2019},
+  pages     = {3623-3634},
+  doi       = {10.18653/v1/p19-1353},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Sims2020,
@@ -39556,6 +39777,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1057/palgrave.ivs.9500180},
   owner     = {Vincent},
   timestamp = {2020.08.13},
+}
+
+@Book{States1997,
+  title     = {Seeing in the dark: Reflections on dreams and dreaming},
+  publisher = {Yale University Press},
+  year      = {1997},
+  author    = {States, B. O.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://psycnet.apa.org/record/1997-97348-000},
 }
 
 @Article{Stauffer2001,
@@ -41326,6 +41557,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.jstor.org/stable/27704349},
 }
 
+@Electronic{Thu2022,
+  author       = {Thu, V.},
+  month        = {05},
+  year         = {2022},
+  title        = {Network of The Witcher},
+  howpublished = {\url{https://www.youtube.com/watch?v=fAHkJ\_Dhr50}},
+  organization = {{Vu Thu}},
+  url          = {https://github.com/thu-vu92/the_witcher_network},
+  owner        = {Vincent},
+  timestamp    = {2022.06.22},
+}
+
 @Article{Thuillard2018,
   author    = {Thuillard, M. and Le Quellec, J.-L. and d'Huy, J.},
   title     = {Computational Approaches to Myths Analysis: Application to the Cosmic Hunt},
@@ -42918,6 +43161,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/w19-2504},
   owner     = {Vincent},
   timestamp = {2020.12.17},
+}
+
+@InProceedings{Vishnubhotla2022,
+  author    = {Vishnubhotla, K. and Hammond, A. and Hirst, G.},
+  title     = {The Project Dialogism Novel Corpus: A Dataset for Quotation Attribution in Literary Texts},
+  booktitle = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2022.04.17},
+  url       = {https://arxiv.org/abs/2204.05836},
 }
 
 @Article{Vishwanathan2010,
