added Schweickert2019 and Schweickert2020

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1587,6 +1587,18 @@
   timestamp = {2020.11.30},
 }
 
+@InCollection{Antrobus2018,
+  author    = {Antrobus, J. S.},
+  title     = {How Does the Waking and Sleeping Brain Produce Spontaneous Thought and Imagery, and Why?},
+  booktitle = {The Oxford handbook of spontaneous thought},
+  publisher = {Oxford University Press},
+  year      = {2018},
+  pages     = {123-132},
+  doi       = {10.1093/oxfordhb/9780190464745.013.36},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Aone1995,
   author    = {Aone, C. and Bennett, S.},
   title     = {Evaluating Automated and Manual Acquisition of Anaphora Resolution Strategies},
@@ -2770,6 +2782,19 @@
   owner       = {Vincent},
   timestamp   = {2021.06.24},
   url         = {https://www.barabasilab.com/post/love-is-all-you-need},
+}
+
+@Article{Barcaro2018,
+  author    = {Barcaro, U. and Carboncini, M. C.},
+  title     = {Network properties of dream sources},
+  journal   = {International Journal of Dream Research},
+  year      = {2018},
+  volume    = {11},
+  number    = {2},
+  pages     = {120–126},
+  doi       = {10.11588/IJODR.2018.2.42736},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Baronchelli2013,
@@ -4210,6 +4235,16 @@
   doi       = {10.1075/slcs.161.07bis},
   owner     = {Vincent},
   timestamp = {2019.03.24},
+}
+
+@Book{Bishop2007,
+  title     = {Discrete Multivariate Analysis: Theory and Practice},
+  publisher = {Springer},
+  year      = {2007},
+  author    = {Bishop, Y. M. M. and Fienberg, S. E. and Holland, P. W.},
+  doi       = {10.1007/978-0-387-72806-3},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @InProceedings{Bjoerkelund2009,
@@ -8336,6 +8371,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.22},
 }
 
+@Article{Cipolli2014,
+  author    = {Cipolli, C. and Guazzelli, M. and Bellucci, C. and Mazzetti, M. and Palagini, L. and Rosenlicht, N. and Feinberg, I.},
+  title     = {Time-of-night variations in the story-like organization of dream experience developed during rapid eye movement sleep},
+  journal   = {Journal of Sleep Research},
+  year      = {2014},
+  volume    = {24},
+  number    = {2},
+  pages     = {234-240},
+  doi       = {10.1111/jsr.12251},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Cipresso2015,
   author    = {Cipresso, P.},
   title     = {Modeling behavior dynamics using computational psychometrics within virtual worlds},
@@ -10803,6 +10851,40 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2022.06.21},
 }
 
+@Article{Domhoff2017,
+  author    = {Domhoff, G. W.},
+  title     = {The invasion of the concept snatchers: The origins, distortions, and future of the continuity hypothesis},
+  journal   = {Dreaming},
+  year      = {2017},
+  volume    = {27},
+  number    = {1},
+  pages     = {14-39},
+  doi       = {10.1037/drm0000047},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
+@InCollection{Domhoff2018,
+  author    = {Domhoff, G. W.},
+  title     = {Dreaming Is an Intensified Form of Mind-Wandering, Based in an Augmented Portion of the Default Network},
+  booktitle = {The Oxford Handbook of Spontaneous Thought: Mind-Wandering, Creativity, and Dreaming},
+  publisher = {Oxford University Press},
+  year      = {2018},
+  doi       = {10.1093/oxfordhb/9780190464745.013.7},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
+@Book{Domhoff2018a,
+  title     = {The emergence of dreaming: Mind wandering, embodied simulation, and the default network},
+  publisher = {Oxford University Press},
+  year      = {2018},
+  author    = {Domhoff, G. W.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://global.oup.com/academic/product/the-emergence-of-dreaming-9780190673420},
+}
+
 @InProceedings{Domingos2001,
   author    = {Domingos, P. and Richardson, M.},
   title     = {Mining the network value of customers},
@@ -11867,6 +11949,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {http://www.theses.fr/2008PA070095},
 }
 
+@Article{Eichenlaub2019,
+  author    = {Eichenlaub, J.-B. and Rijn, E. and Phelan, M. and Ryder, L. and Gaskell, M. G. and Lewis, P. A. and Walker, M. P. and Blagrove, M.},
+  title     = {The nature of delayed dream incorporation (`dream-lag effect'): Personally significant events persist, but not major daily activities or concerns},
+  journal   = {Journal of Sleep Research},
+  year      = {2019},
+  volume    = {28},
+  number    = {1},
+  pages     = {e12697},
+  doi       = {10.1111/jsr.12697},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Eichner2012,
   author    = {Eichner, M. and Marin-Jimenez, M. and Zisserman, A. and Ferrari, V.},
   title     = {2D Articulated Human Pose Estimation and Retrieval in (Almost) Unconstrained Still Images},
@@ -12331,6 +12426,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2018.07.10},
   url       = {http://www.theses.fr/2013TOU30131},
+}
+
+@Article{Erdelyi2017,
+  author    = {Erdelyi, M. H.},
+  title     = {The continuity hypothesis.},
+  journal   = {Dreaming},
+  year      = {2017},
+  volume    = {27},
+  number    = {4},
+  pages     = {334-344},
+  doi       = {10.1037/drm0000063},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Erdos1959,
@@ -15461,6 +15569,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2018.10.27},
 }
 
+@Article{GOI2010,
+  author    = {Goñi, J., Martincorena, I., Corominas-Murtra, B., Arrondo, G., Ardanza-Trevijano, S., Villoslada, P.},
+  title     = {Switcher-random-walks: a cognitive-inspired mechanism for network exploration},
+  journal   = {International Journal of Bifurcation and Chaos},
+  year      = {2010},
+  volume    = {20},
+  number    = {03},
+  pages     = {913-922},
+  doi       = {10.1142/s0218127410026204},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Golbeck2003,
   author    = {Golbeck, J. and Parsia, B. and Hendler, J.},
   title     = {Trust Networks on the Semantic Web},
@@ -17897,6 +18018,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1186/1471-2288-13-47},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Henry2004,
+  author    = {Henry, J. D. and Crawford, J. R. and Phillips, L. H.},
+  title     = {Verbal fluency performance in dementia of the Alzheimer's type: a meta-analysis},
+  journal   = {Neuropsychologia},
+  year      = {2004},
+  volume    = {42},
+  number    = {9},
+  pages     = {1212-1222},
+  doi       = {10.1016/j.neuropsychologia.2004.02.001},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Henry2007,
@@ -20816,6 +20950,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
+@Article{Kahan1997,
+  author    = {Kahan, T. L. and LaBerge, S. and Levitan, L. and Zimbardo, P.},
+  title     = {Similarities and Differences between Dreaming and Waking Cognition: An Exploratory Study},
+  journal   = {Consciousness and Cognition},
+  year      = {1997},
+  volume    = {6},
+  number    = {1},
+  pages     = {132-147},
+  doi       = {10.1006/ccog.1996.0274},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Book{Kain1947,
   title     = {Fabulous Voyager: James Joyce's ``Ulysses''},
   publisher = {University of Chicago Press},
@@ -21304,6 +21451,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.ru.ac.bd/stat/wp-content/uploads/sites/25/2019/03/302_05_Kendall-Advanced-Theory-of-Statistics-3rd-Edition-2010.pdf},
 }
 
+@InProceedings{Kenett2016,
+  author    = {Kenett, Y. N. and Austerweil, J. L.},
+  title     = {Examining Search in Low and High Creative Individuals with Random Walks},
+  booktitle = {38th Annual Meeting of the Cognitive Science Society},
+  year      = {2016},
+  pages     = {313-318},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://alab.psych.wisc.edu/papers/files/Kenett16CreativityRW.pdf},
+}
+
 @Article{Kenna2010,
   author    = {Kenna, R. and Berche, B.},
   title     = {Critical mass and the dependency of research quality on group size},
@@ -21587,6 +21745,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1515/cllt.2005.1.2.263},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Killeen2013,
+  author    = {Killeen, P. R.},
+  title     = {Absent without leave$\mathsemicolon$ a neuroenergetic theory of mind wandering},
+  journal   = {Frontiers in Psychology},
+  year      = {2013},
+  volume    = {4},
+  pages     = {373},
+  doi       = {10.3389/fpsyg.2013.00373},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Killworth1976,
@@ -22657,6 +22827,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dh2018.adho.org/quantitative-microanalysis-different-methods-of-digital-drama-analysis-in-comparison/},
 }
 
+@Article{Kreiman2000,
+  author    = {Kreiman, G. and Koch, C. and Fried, I.},
+  title     = {Category-specific visual responses of single neurons in the human medial temporal lobe},
+  journal   = {Nature Neuroscience},
+  year      = {2000},
+  volume    = {3},
+  number    = {9},
+  pages     = {946-953},
+  doi       = {10.1038/78868},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Krems2013,
   author    = {Krems, J. A. and Dunbar, R. I. M.},
   title     = {Clique Size and Network Characteristics in Hyperlink Cinema},
@@ -23154,6 +23337,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/tmm.2016.2614184},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Kuska2016,
+  author    = {Kuška, M. and Trnka, R. and Kuběna, A. A. and Růžička, J.},
+  title     = {Free Associations Mirroring Self- and World-Related Concepts: Implications for Personal Construct Theory, Psycholinguistics and Philosophical Psychology},
+  journal   = {Frontiers in Psychology},
+  year      = {2016},
+  volume    = {7},
+  pages     = {981},
+  doi       = {10.3389/fpsyg.2016.00981},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Kuttler2003,
@@ -26967,6 +27162,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.10.13},
 }
 
+@InCollection{Mandelbrot1965,
+  author    = {Mandelbrot, B.},
+  title     = {Information Theory and Psycholinguistics},
+  booktitle = {Scientific psychology},
+  publisher = {Basic Books},
+  year      = {1965},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://users.math.yale.edu/~bbm3/web_pdfs/042informationTheory.pdf},
+}
+
 @InProceedings{Mani2000,
   author    = {Mani, I. and Wilson, G.},
   title     = {Robust temporal processing of news},
@@ -29132,6 +29338,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.12.01},
   url       = {https://www.jstor.org/stable/j.ctt15r3zwk},
+}
+
+@Article{Mittner2014,
+  author    = {Mittner, M. and Boekel, W. and Tucker, A. M. and Turner, B. M. and Heathcote, A. and Forstmann, B. U.},
+  title     = {When the Brain Takes a Break: A Model-Based Analysis of Mind Wandering},
+  journal   = {Journal of Neuroscience},
+  year      = {2014},
+  volume    = {34},
+  number    = {49},
+  pages     = {16286-16295},
+  doi       = {10.1523/jneurosci.2062-14.2014},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Mitzenmacher2003,
@@ -35178,6 +35397,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://econpapers.repec.org/article/fipfedgrb/y_3a1993_3ai_3amar_3ap_3a188-189_3an_3av.79no.3.htm},
 }
 
+@Article{Rhodes2007,
+  author    = {Rhodes, T. and Turvey, M. T.},
+  title     = {Human memory retrieval as Lévy foraging},
+  journal   = {Physica A},
+  year      = {2007},
+  volume    = {385},
+  number    = {1},
+  pages     = {255-260},
+  doi       = {10.1016/j.physa.2007.07.001},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Article{Ribeiro2016,
   author    = {Ribeiro, M. A. and Vosgerau, R. A. and Pereira Andruchiw, M. L. and de Souza Pinto, S. E.},
   title     = {The complex social network from {The Lord of The Rings}},
@@ -36067,6 +36299,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1177/0003065109352491},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Rosen1980,
+  author    = {Rosen, W. G.},
+  title     = {Verbal fluency in aging and dementia},
+  journal   = {Journal of Clinical Neuropsychology},
+  year      = {1980},
+  volume    = {2},
+  number    = {2},
+  pages     = {135-146},
+  doi       = {10.1080/01688638008403788},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Rosenthal2017,
@@ -37204,6 +37449,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.08},
 }
 
+@InCollection{Sarkar2011,
+  author    = {Sarkar, P. and Moore, A. W.},
+  title     = {Random Walks in Social Networks and their Applications: A Survey},
+  booktitle = {Social Network Data Analytics},
+  publisher = {Springer},
+  year      = {2011},
+  pages     = {43-77},
+  doi       = {10.1007/978-1-4419-8462-3_3},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Sarmento2009,
   author    = {Sarmento, L. and Nunes, S.},
   title     = {Automatic extraction of quotes and topics from news feeds},
@@ -37695,6 +37952,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/s0074-7742(10)92007-2},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Article{Schredl2010a,
+  author    = {Schredl, M.},
+  title     = {Dream content analysis: Basic principles},
+  journal   = {International Journal of Dream Research},
+  year      = {2010},
+  volume    = {3},
+  number    = {1},
+  pages     = {65-73},
+  doi       = {10.11588/IJODR.2010.1.474},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
+@Article{Schredl2013,
+  author    = {Schredl, M.},
+  title     = {Dreams of core family members in a long dream series},
+  journal   = {International Journal of Dream Research},
+  year      = {2013},
+  volume    = {6},
+  number    = {2},
+  pages     = {114-118},
+  doi       = {10.11588/IJODR.2013.2.11055},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Schredl2022,
@@ -38979,6 +39262,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.01.21},
 }
 
+@Article{Smallwood2015,
+  author    = {Smallwood, J. and Schooler, J. W.},
+  title     = {The Science of Mind Wandering: Empirically Navigating the Stream of Consciousness},
+  journal   = {Annual Review of Psychology},
+  year      = {2015},
+  volume    = {66},
+  number    = {1},
+  pages     = {487-518},
+  doi       = {10.1146/annurev-psych-010814-015331},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @InProceedings{Smeaton2006,
   author    = {Smeaton, A. F. and Lehane, B. and O'Connor, N. E. and Brady, C. and Craig, G.},
   title     = {Automatically selecting shots for action movie trailers},
@@ -40190,6 +40486,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://aclanthology.info/papers/L04-1208/l04-1208},
 }
 
+@Book{Strauch1996,
+  title     = {In search of dreams: Results of experimental dream research},
+  publisher = {State University of New York Press},
+  year      = {1996},
+  author    = {Strauch, I. and Meier, B.},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://books.google.fr/books/about/In_Search_of_Dreams.html},
+}
+
 @Book{Streeter1924,
   title     = {The four gospels. A study of origins},
   publisher = {Macmillan and Company},
@@ -40509,6 +40815,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.adhoc.2005.01.002},
   owner     = {Vincent},
   timestamp = {2020.03.17},
+}
+
+@Article{Sung2012,
+  author    = {Sung, K. and Gordon, B. and Vannorsdall, T. D. and Ledoux, K. and Pickett, E. J. and Pearlson, G. D. and Schretlen, D. J.},
+  title     = {Semantic Clustering of Category Fluency in Schizophrenia Examined with Singular Value Decomposition},
+  journal   = {Journal of the International Neuropsychological Society},
+  year      = {2012},
+  volume    = {18},
+  number    = {03},
+  pages     = {565-575},
+  doi       = {10.1017/s1355617712000136},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @InProceedings{Suppa2015,
@@ -41508,6 +41827,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.hup.harvard.edu/catalog.php?isbn=9780674010871},
 }
 
+@Article{Thompson2014,
+  author    = {Thompson, G. W. and Kello, C. T.},
+  title     = {Walking across Wikipedia: a scale-free network model of semantic memory retrieval},
+  journal   = {Frontiers in Psychology},
+  year      = {2014},
+  volume    = {5},
+  pages     = {86},
+  doi       = {10.3389/fpsyg.2014.00086},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Book{Thomson1952,
   title     = {The Gaelic Sources of Macpherson's Ossian},
   publisher = {Oliver \& Boyd},
@@ -42238,6 +42569,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.11},
 }
 
+@Article{Troyer1997,
+  author    = {Troyer, A. K. and Moscovitch, M. and Winocur, G.},
+  title     = {Clustering and switching as two components of verbal fluency: Evidence from younger and older healthy adults},
+  journal   = {Neuropsychology},
+  year      = {1997},
+  volume    = {11},
+  number    = {1},
+  pages     = {138-146},
+  doi       = {10.1037/0894-4105.11.1.138},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+}
+
 @Book{Truby2007,
   title     = {The Anatomy of Story: 22 steps to becoming a master storyteller},
   publisher = {Faber and Faber},
@@ -42386,6 +42730,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/3-540-37623-2_33},
   owner     = {Vincent},
   timestamp = {2019.03.23},
+}
+
+@Article{Tuominen2019,
+  author    = {Tuominen, J. and Stenberg, T. and Revonsuo, A. and Valli, K.},
+  title     = {Social contents in dreams: An empirical test of the Social Simulation Theory},
+  journal   = {Consciousness and Cognition},
+  year      = {2019},
+  volume    = {69},
+  pages     = {133-145},
+  doi       = {10.1016/j.concog.2019.01.017},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
 }
 
 @Article{Turcotte2002,
@@ -43405,6 +43761,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1002/sim.7247},
   owner     = {Vincent},
   timestamp = {2020.12.12},
+}
+
+@InProceedings{Vugt2015,
+  author    = {van Vugt, M. and Taatgen, N. and Sackur, J. and Bastian, M.},
+  title     = {Modeling mind-wandering: a tool to better understand distraction},
+  booktitle = {13th International Conference on Cognitive Modeling},
+  year      = {2015},
+  pages     = {252},
+  owner     = {Vincent},
+  timestamp = {2022.06.22},
+  url       = {https://research.rug.nl/en/publications/modeling-mind-wandering-a-tool-to-better-understand-distraction},
 }
 
 @InProceedings{Vuillemot2009,
